update switches, dimmers WIP

--- a/src/i18n/switches/fr.json
+++ b/src/i18n/switches/fr.json
@@ -1,3 +1,5 @@
 {
-  "switches_title": "Lumières et interrupteurs"
+  "switches_title": "Lumières et interrupteurs",
+  "switch_title": "Interrupteurs",
+  "dimmer_title": "Gradateurs"
 }
