--- a/src/i18n/switches/fr.json
+++ b/src/i18n/switches/fr.json
@@ -1,5 +1,7 @@
 {
   "switches_title": "Lumières et interrupteurs",
   "switch_title": "Interrupteurs",
-  "dimmer_title": "Gradateurs"
+  "dimmer_title": "Gradateurs",
+  "edit": "Modifier",
+  "monitor": "Moniteur"
 }
