--- a/src/i18n/components/dimmer/fr.json
+++ b/src/i18n/components/dimmer/fr.json
@@ -2,7 +2,7 @@
     "dimmer_edit": "Modifier",
 	"dimmer_update_name": "Nom: ",
 	"dimmer_update_enabled": "Actif: ",
-	"dimmer_update_monitor": "monitoré: ",
+	"dimmer_update_monitor": "Monitoré: ",
 	"dimmer_update_monitor_every": "Fréquence: ",
 	"dimmer_btn_ok": "OK",
 	"dimmer_btn_cancel": "Annuler",
