--- a/src/i18n/components/switches/fr.json
+++ b/src/i18n/components/switches/fr.json
@@ -2,7 +2,7 @@
   "switch_update_title": "Interrupteur",
   "switch_update_name": "Nom: ",
   "switch_update_enabled": "Actif: ",
-  "switch_update_monitor": "monitoré: ",
+  "switch_update_monitor": "Monitoré: ",
   "switch_update_monitor_every": "Fréquence: ",
   "switch_btn_ok": "OK",
   "switch_btn_cancel": "Annuler",
