--- a/src/i18n/switches/en.json
+++ b/src/i18n/switches/en.json
@@ -1,5 +1,6 @@
 {
   "switches_title": "Lights and switches",
   "switch_title": "Switches",
-  "dimmer_title": "Dimmers"
+  "dimmer_title": "Dimmers",
+  "add_to_dashboard": "Add to dashboard"
 }
