--- a/src/i18n/core/en.json
+++ b/src/i18n/core/en.json
@@ -1,5 +1,8 @@
 {
 	"btn_ok": "OK",
 	"btn_cancel": "Cancel",
-	"btn_close": "Close"
+	"btn_close": "Close",
+	"edit": "Edit",
+	"remove": "Remove",
+	"add_to_dashboard": "Add to dashboard"
 }
