Update tags WIP

--- a/src/i18n/app/en.json
+++ b/src/i18n/app/en.json
@@ -7,7 +7,8 @@
 	"btn_close": "Close",
 	"edit": "Edit",
 	"remove": "Remove",
-	"add_to_dashboard": "Add to dashboard",
+	"add_to_dashboard_current_profile": "Add to dashboard (Current profile)",
+	"add_to_dashboard_all_profiles": "Add to dashboard (All profiles)",
 	"profile": "Profile",
 	"profile_get_error": "Error getting current profile",
 	"profile_default": "Default",
@@ -96,7 +97,6 @@
 	"switches_title": "Lights and switches",
 	"switch_title": "Switches",
 	"dimmer_title": "Dimmers",
-	"add_to_dashboard": "Add to dashboard",
 	"param_profiles_list": "Profiles",
 	"profile_name": "Name",
 	"profile_description": "Description",
