--- a/src/i18n/app/fr.json
+++ b/src/i18n/app/fr.json
@@ -7,7 +7,8 @@
 	"btn_close": "Fermer",
 	"edit": "Modifier",
 	"remove": "Supprimer",
-	"add_to_dashboard": "Ajouter au tableau de bord",
+	"add_to_dashboard_current_profile": "Ajouter au tableau de bord (utilisateur courant)",
+	"add_to_dashboard_all_profiles": "Ajouter au tableau de bord (tous les utilisateurs)",
 	"profile_default": "Défaut",
 	"profile": "Profil",
 	"profile_get_error": "Erreur lors de la récupération du profil",
@@ -96,8 +97,6 @@
 	"switches_title": "Lumières et interrupteurs",
 	"switch_title": "Interrupteurs",
 	"dimmer_title": "Gradateurs",
-	"add_to_dashboard": "Ajouter au tableau de bord",
-	"param_profiles_list": "Profils",
 	"profile_name": "Nom",
 	"profile_description": "Description",
 	"profile_default": "Profil par défaut",
