Current pfofile add to dashboard WIP

--- a/src/i18n/app/en.json
+++ b/src/i18n/app/en.json
@@ -9,6 +9,9 @@
 	"remove": "Remove",
 	"add_to_dashboard_current_profile": "Add to dashboard (Current profile)",
 	"add_to_dashboard_all_profiles": "Add to dashboard (All profiles)",
+    "angharad_add_to_dashboard": "Add to dashboard",
+    "angharad_add_to_dashboard_success": "Success",
+    "angharad_add_to_dashboard_error": "Error",
 	"profile": "Profile",
 	"profile_get_error": "Error getting current profile",
 	"profile_default": "Default",
