--- a/src/i18n/app/fr.json
+++ b/src/i18n/app/fr.json
@@ -9,6 +9,9 @@
 	"remove": "Supprimer",
 	"add_to_dashboard_current_profile": "Ajouter au tableau de bord (utilisateur courant)",
 	"add_to_dashboard_all_profiles": "Ajouter au tableau de bord (tous les utilisateurs)",
+    "angharad_add_to_dashboard": "Ajout au tableau de bord",
+    "angharad_add_to_dashboard_success": "Succès",
+    "angharad_add_to_dashboard_error": "Erreur",
 	"profile_default": "Défaut",
 	"profile": "Profil",
 	"profile_get_error": "Erreur lors de la récupération du profil",
