--- a/src/i18n/app/fr.json
+++ b/src/i18n/app/fr.json
@@ -7,8 +7,7 @@
 	"btn_close": "Fermer",
 	"edit": "Modifier",
 	"remove": "Supprimer",
-	"add_to_dashboard_current_profile": "Ajouter au tableau de bord (utilisateur courant)",
-	"add_to_dashboard_all_profiles": "Ajouter au tableau de bord (tous les utilisateurs)",
+	"add_to_dashboard": "Ajouter au tableau de bord",
     "angharad_add_to_dashboard": "Ajout au tableau de bord",
     "angharad_add_to_dashboard_success": "Succès",
     "angharad_add_to_dashboard_error": "Erreur",
