Implement a module full independant

--- a/src/components/core/i18n/fr.json
+++ b/src/components/core/i18n/fr.json
@@ -1,4 +1,91 @@
 {
+    "dimmer_edit": "Modifier",
+	"dimmer_update_name": "Nom: ",
+	"dimmer_update_enabled": "Actif: ",
+	"dimmer_update_monitor": "Monitoré: ",
+	"dimmer_update_monitor_every": "Fréquence: ",
+	"dimmer_btn_ok": "OK",
+	"dimmer_btn_cancel": "Annuler",
+	"dimmer_save": "Sauvegarde du gradateur",
+	"dimmer_save_success": "Succès",
+	"dimmer_save_error": "Erreur",
+	"dimmer_edit": "Modifier",
+	"dimmer_monitor": "Moniteur",
+	"heater_update_title": "Thermostat",
+	"heater_update_name": "Nom: ",
+	"heater_update_unit": "Unité: ",
+	"heater_update_enabled": "Actif: ",
+	"heater_update_monitor": "Monitoré: ",
+	"heater_update_monitor_every": "Fréquence: ",
+	"heater_btn_ok": "OK",
+	"heater_btn_cancel": "Annuler",
+	"heater_save": "Sauvegarde du thermostat",
+	"heater_save_success": "Succès",
+	"heater_save_error": "Erreur",
+	"heater_edit": "Modifier",
+	"heater_monitor": "Moniteur",
+	"heater_mode_title": "Mode",
+	"heater_mode_off": "Éteint",
+	"heater_mode_auto": "Automatique",
+	"heater_mode_manual": "Manuel",
+	"monitor_title": "Moniteur",
+	"monitor_close": "Fermer",
+	"monitor_1_minute": "1 minute",
+	"monitor_2_minutes": "2 minutes",
+	"monitor_5_minutes": "5 minutes",
+	"monitor_10_minutes": "10 minutes",
+	"monitor_15_minutes": "15 minutes",
+	"monitor_20_minutes": "20 minutes",
+	"monitor_30_minutes": "30 minutes",
+	"monitor_1_hour": "1 heure",
+	"monitor_2_hours": "2 heures",
+	"monitor_3_hours": "3 heures",
+	"monitor_4_hours": "4 heures",
+	"monitor_5_hours": "5 heures",
+	"monitor_6_hours": "6 heures",
+	"monitor_12_hours": "12 heures",
+	"monitor_1_day": "1 jour",
+	"sensor_update_title": "Capteur",
+	"sensor_update_name": "Nom: ",
+	"sensor_update_unit": "Unité: ",
+	"sensor_update_enabled": "Actif: ",
+	"sensor_update_monitor": "Monitoré: ",
+	"sensor_update_monitor_every": "Fréquence: ",
+	"sensor_btn_ok": "OK",
+	"sensor_btn_cancel": "Annuler",
+	"sensor_save": "Sauvegarde du capteur",
+	"sensor_save_success": "Succès",
+	"sensor_save_error": "Erreur",
+	"sensor_edit": "Modifier",
+	"sensor_monitor": "Moniteur",
+	"switch_update_title": "Interrupteur",
+	"switch_update_name": "Nom: ",
+	"switch_update_enabled": "Actif: ",
+	"switch_update_monitor": "Monitoré: ",
+	"switch_update_monitor_every": "Fréquence: ",
+	"switch_btn_ok": "OK",
+	"switch_btn_cancel": "Annuler",
+	"switch_save": "Sauvegarde de l'interrupteur",
+	"switch_save_success": "Succès",
+	"switch_save_error": "Erreur",
+	"switch_edit": "Modifier",
+	"switch_monitor": "Moniteur",
+	"switch_update_title": "Interrupteur",
+	"switch_update_name": "Nom: ",
+	"switch_update_enabled": "Actif: ",
+	"switch_update_monitor": "Monitoré: ",
+	"switch_update_monitor_every": "Fréquence: ",
+	"switch_btn_ok": "OK",
+	"switch_btn_cancel": "Annuler",
+	"switch_save": "Sauvegarde de l'interrupteur",
+	"switch_save_success": "Succès",
+	"switch_save_error": "Erreur",
+	"switch_edit": "Modifier",
+	"switch_monitor": "Moniteur",
+    "top_right_menu_admin_mode": "Admin",
+    "top_right_menu_lang": "Langage",
+    "top_right_menu_refresh": "Rafraîchir",
+    "top_right_menu_profile": "Profil",
 	"angharad_loading_title": "Angharad",
 	"benoic_loading_title": "Benoic",
 	"carleon_loading_title": "Carleon",
@@ -113,5 +200,6 @@
 	"profile_remove_confirm": "Êtes-vous sûr de vouloir supprimer ce profil ?",
 	"profiles_save_success": "Succès",
 	"profiles_save_error": "Erreur",
-	"profile_used": "Profil courant"
+	"profile_used": "Profil courant",
+	"service_add": "Ajouter"
 }
