--- a/src/components/core/i18n/en.json
+++ b/src/components/core/i18n/en.json
@@ -90,6 +90,7 @@
 	"benoic_loading_title": "Benoic",
 	"carleon_loading_title": "Carleon",
 	"btn_ok": "OK",
+	"btn_add": "Add",
 	"btn_cancel": "Cancel",
 	"btn_close": "Close",
 	"edit": "Edit",
