--- a/src/components/core/i18n/fr.json
+++ b/src/components/core/i18n/fr.json
@@ -90,6 +90,7 @@
 	"benoic_loading_title": "Benoic",
 	"carleon_loading_title": "Carleon",
 	"btn_ok": "Valider",
+	"btn_add": "Ajouter",
 	"btn_cancel": "Annuler",
 	"btn_close": "Fermer",
 	"edit": "Modifier",
