--- a/src/components/core/i18n/fr.json
+++ b/src/components/core/i18n/fr.json
@@ -187,6 +187,7 @@
 	"switches_title": "Lumières et interrupteurs",
 	"switch_title": "Interrupteurs",
 	"dimmer_title": "Gradateurs",
+	"param_profiles_list": "Profils",
 	"profile_name": "Nom",
 	"profile_description": "Description",
 	"profile_default": "Profil par défaut",
