--- a/src/components/carleonMock/i18n/en.json
+++ b/src/components/carleonMock/i18n/en.json
@@ -15,5 +15,11 @@
 	"carleon_mock_confirm": "Are yo sure you want to remove this service?",
 	"carleon_mock_remove": "Remove service",
 	"carleon_mock_remove_success": "Success",
-	"carleon_mock_remove_error": "Error"
+	"carleon_mock_remove_error": "Error",
+	"carleon_mock_command_exec1_title": "Fake command 1",
+	"carleon_mock_command_exec1_parameter_param1_title": "First parameter",
+	"carleon_mock_command_exec1_parameter_param2_title": "Second Parameter",
+	"carleon_mock_command_exec1_parameter_param3_title": "Third parameter",
+	"carleon_mock_command_exec2_title": "Fake command 2",
+	"carleon_mock_command_exec2_parameter_param1_title": "Other parameter"
 }
