--- a/src/components/script/i18n/fr.json
+++ b/src/components/script/i18n/fr.json
@@ -12,5 +12,22 @@
 	"script_switch_value": "État",
 	"not_found": "Non trouvé",
 	"switch_on": "Allumer",
-	"switch_off": "Éteindre"
+	"switch_off": "Éteindre",
+	"script_save": "Sauvegarde de la tâche",
+	"script_save_success": "Succès",
+	"script_save_error": "Erreur",
+	"script_run": "Exécution de {{name}}",
+	"script_run_success": "Succès",
+	"script_run_error": "Erreur",
+	"script_dimmer_select": "Gradateur",
+	"script_dimmer_value": "Valeur",
+	"script_heater_select": "Thermostat",
+	"script_heater_value": "Valeur",
+	"script_heater_mode_title": "Mode",
+	"script_error_name_exist": "Un script avec le même nom existe déjà",
+	"script_element_select": "Élément",
+	"script_remove_confirm": "Êtes-vous sûr de vouloir supprimer la tâche ?",
+	"script_remove": "Suppression",
+	"script_remove_success": "Succès",
+	"script_remove_error": "Erreur"
 }
