--- a/src/components/core/i18n/fr.json
+++ b/src/components/core/i18n/fr.json
@@ -203,5 +203,112 @@
 	"profiles_save_success": "Succès",
 	"profiles_save_error": "Erreur",
 	"profile_used": "Profil courant",
-	"service_add": "Ajouter"
+	"service_add": "Ajouter",
+	"event_modal_title": "Événement",
+	"events_title": "Événements",
+	"events_button_add": "Ajouter un événement",
+	"event_type_select": "Type d'événement",
+	"event_type_scheduler": "Planifié",
+	"event_type_trigger": "Déclenché",
+	"event_script_select": "Sélectionner une tâche",
+	"event_add": "Ajouter",
+	"event_script_list": "Tâches",
+	"event_scheduler_date_select": "Prochain lancement",
+	"date_picker_now": "maintenant",
+	"date_picker_today": "Aujourd'hui",
+	"date_picker_date": "Date",
+	"date_picker_time": "Heure",
+	"date_picker_close": "Fermer",
+	"event_scheduler_repeat": "Répéter",
+	"event_scheduler_remove_after": "Supprimer après l'exécution",
+	"event_scheduler_repeat_every": "Fréquence",
+	"event_scheduler_repeat_every_minutes": "Minutes",
+	"event_scheduler_repeat_every_hours": "Heures",
+	"event_scheduler_repeat_every_days": "Jours",
+	"event_scheduler_repeat_every_days_of_week": "Jours de la semaine",
+	"event_scheduler_repeat_every_months": "Mois",
+	"event_scheduler_repeat_every_year": "Années",
+	"event_scheduler_repeat_every_value": "Valeur",
+	"event_scheduler_repeat_every_day_of_week_monday": "Lundi",
+	"event_scheduler_repeat_every_day_of_week_tuesday": "Mardi",
+	"event_scheduler_repeat_every_day_of_week_wednesday": "Mercredi",
+	"event_scheduler_repeat_every_day_of_week_thursday": "Jeudi",
+	"event_scheduler_repeat_every_day_of_week_friday": "Vendredi",
+	"event_scheduler_repeat_every_day_of_week_saturday": "Samedi",
+	"event_scheduler_repeat_every_day_of_week_sunday": "Dimanche",
+	"event_condition_select": "Sélectionner une condition",
+	"event_condition_list": "Conditions",
+	"event_condition_benoic_switch": "Interrupteur",
+	"event_condition_benoic_dimmer": "Gradateur",
+	"event_condition_benoic_heater": "Thermostat",
+	"event_condition_benoic_sensor": "Capteur",
+	"condition_switch_on": "allumé",
+	"condition_switch_off": "éteint",
+	"not_found": "Non trouvé",
+	"event_name": "Nom",
+	"event_description": "Description",
+	"event_enabled": "Actif",
+	"scheduler_save": "Sauvegarde d'une tâche planifiée",
+	"scheduler_save_success": "Succès",
+	"scheduler_save_error": "Erreur",
+	"schedulers_title": "Tâches planifiées",
+	"scheduler_enable_button": "Actif:",
+	"scheduler_next_time": "Prochain lancement:",
+	"event_name_mandatory": "Le nom est obligatoire",
+	"event_name_already_exist": "Ce nom est déjà utilisé",
+	"event_type_mandatory": "Vous devez sélectionner un type d'événement",
+	"event_scheduler_date_mandatory": "La date est obligatoire",
+	"event_scheduler_date_future": "La date doit être dans le futur",
+	"event_script_mandatory": "Vous devez ajouter au moins une tâche",
+	"scheduler_enable": "Activation d'une tâche planifiée",
+	"scheduler_enable_success": "Succès",
+	"scheduler_enable_error": "Erreur",
+	"scheduler_disabled": "Inactif",
+	"condition_or": "ou",
+	"scheduler_condition_value": "Valeur",
+	"condition_contains": "Contient",
+	"condition_not_contains": "Ne contient pas",
+	"condition_result_select": "Valeur renvoyée testée",
+	"condition_result_one_value": "Valeur",
+	"switch_title": "Interrupteur",
+	"dimmer_title": "Gradateur",
+	"heater_title": "Thermostat",
+	"sensor_title": "Capteur",
+	"injector_not_found": "Erreur, module inconnu",
+	"script_modal_title": "Tâche",
+	"script_name": "Nom",
+	"script_description": "Description",
+	"script_add_action": "Ajouter une action",
+	"script_action": "Action",
+	"script_actions": "Actions",
+	"script_action_benoic_switch": "Interrupteur",
+	"script_action_benoic_dimmer": "Gradateur",
+	"script_action_benoic_heater": "Thermostat",
+	"script_switch_select": "Interrupteur",
+	"script_switch_value": "État",
+	"not_found": "Non trouvé",
+	"switch_on": "Allumer",
+	"switch_off": "Éteindre",
+	"script_save": "Sauvegarde de la tâche",
+	"script_save_success": "Succès",
+	"script_save_error": "Erreur",
+	"script_run": "Exécution de {{name}}",
+	"script_run_success": "Succès",
+	"script_run_error": "Erreur",
+	"script_dimmer_select": "Gradateur",
+	"script_dimmer_value": "Valeur",
+	"script_heater_select": "Thermostat",
+	"script_heater_command": "Comande",
+	"script_heater_mode_title": "Mode",
+	"script_error_name_exist": "Un script avec le même nom existe déjà",
+	"script_element_select": "Élément",
+	"script_remove_confirm": "Êtes-vous sûr de vouloir supprimer la tâche ?",
+	"script_remove": "Suppression",
+	"script_remove_success": "Succès",
+	"script_remove_error": "Erreur",
+	"script_sensor_select": "Capteur",
+	"script_sensor_value": "Valeur",
+	"dashboard_button_add_title_line": "Ajouter un séparateur",
+	"dashboard_add_line": "Ajout d'un séparateur",
+	"dashboard_add_line_value": "Titre"
 }
