--- a/src/components/carleonMock/i18n/fr.json
+++ b/src/components/carleonMock/i18n/fr.json
@@ -20,6 +20,14 @@
 	"carleon_mock_command_exec1_parameter_param1_title": "Premier paramètre",
 	"carleon_mock_command_exec1_parameter_param2_title": "Second paramètre",
 	"carleon_mock_command_exec1_parameter_param3_title": "Troisième paramètre",
+	"carleon_mock_command_exec1_result_value1_title": "valeur 1",
+	"carleon_mock_command_exec1_result_value2_title": "valeur 2",
 	"carleon_mock_command_exec2_title": "Commande factice 2",
-	"carleon_mock_command_exec2_parameter_param1_title": "Autre paramètre"
+	"carleon_mock_command_exec2_parameter_param1_title": "Autre paramètre",
+	"carleon_mock_command_exec2_result_title": "valeur",
+	"carleon_mock_command_exec3_title": "Commande factice 3",
+	"carleon_mock_command_exec3_result_title": "valeur",
+	"carleon_mock_command_exec4_title": "Commande factice 4",
+	"carleon_mock_command_exec4_result_value1_title": "valeur 1",
+	"carleon_mock_command_exec4_result_value2_title": "valeur 2"
 }
