--- a/src/components/core/i18n/fr.json
+++ b/src/components/core/i18n/fr.json
@@ -28,7 +28,7 @@
 	"heater_mode_off": "Éteint",
 	"heater_mode_auto": "Automatique",
 	"heater_mode_manual": "Manuel",
-	"monitor_title": "Moniteur",
+	"monitor_title": "Moniteur: ",
 	"monitor_close": "Fermer",
 	"monitor_1_minute": "1 minute",
 	"monitor_2_minutes": "2 minutes",
@@ -314,5 +314,24 @@
 	"dimmer_switch_off": "Éteindre",
 	"login": "Nom d'utilisateur",
 	"password": "Mot de passe",
-	"monitors_title": "Historique des mesures"
+	"monitors_title": "Historique des mesures",
+	"monitors_button_add": "Ajouter un tableau de mesures",
+	"monitor_new_title": "Nouvel historique de mesures",
+	"monitor_new_value": "Nom",
+	"monitor_save": "Sauvegarde",
+	"monitor_save_success": "Succès",
+	"monitor_save_error": "Erreur",
+	"monitor_new_element": "Nouvel element",
+	"monitor_new_element_button": "Ajouter",
+	"monitor_select_duration": "Changer l'intervalle",
+	"duration_last_hour": "Dernière heure",
+	"duration_last_2_hours": "Dernières 2 heures",
+	"duration_last_3_hours": "Dernières 3 heures",
+	"duration_last_6_hours": "Dernières 6 heures",
+	"duration_last_12_hours": "Dernières 12 heures",
+	"duration_last_day": "Dernier jour",
+	"duration_last_2_days": "Derniers 2 jours",
+	"duration_last_3_days": "Derniers 3 jours",
+	"duration_last_7_days": "Dernière semaine",
+	"duration_last_month": "Dernier mois"
 }
