Implement logs with its filters and alerts management

--- a/src/components/core/i18n/fr.json
+++ b/src/components/core/i18n/fr.json
@@ -89,6 +89,7 @@
 	"angharad_loading_title": "Angharad",
 	"benoic_loading_title": "Benoic",
 	"carleon_loading_title": "Carleon",
+	"gareth_loading_title": "Gareth",
 	"btn_ok": "Valider",
 	"btn_add": "Ajouter",
 	"btn_cancel": "Annuler",
@@ -106,8 +107,9 @@
 	"profile_save_success": "Succès",
 	"profile_save_error": "Erreur",
 	"angharad_loading_error": "Erreur lors du chargement de Angharad",
-	"benoic_loading_error": "Erreur lors du chargement de Benoic",
-	"carleon_loading_error": "Erreur lors du chargement des modues Carleon",
+	"benoic_loading_error": "Erreur lors du chargement du module Benoic",
+	"carleon_loading_error": "Erreur lors du chargement du module Carleon",
+	"gareth_loading_error": "Erreur lors du chargement du module Gareth",
 	"login_sign_in": "Connexion",
 	"login_username": "Nom d'utilisateur",
 	"login_password": "Mot de passe",
@@ -333,5 +335,96 @@
 	"duration_last_2_days": "Derniers 2 jours",
 	"duration_last_3_days": "Derniers 3 jours",
 	"duration_last_7_days": "Dernière semaine",
-	"duration_last_month": "Dernier mois"
+	"duration_last_month": "Dernier mois",
+	"logs_title": "Journaux",
+	"logs_table_priority": "Priorité",
+	"logs_table_date": "Date",
+	"logs_table_source": "Origine",
+	"logs_table_text": "Message",
+	"logs_table_tags": "Étiquettes",
+	"logs_priority_none": "Aucune",
+	"logs_priority_low": "Basse",
+	"logs_priority_medium": "Moyenne",
+	"logs_priority_high": "Élevée",
+	"logs_priority_critical": "Critique",
+	"logs_priority_not_found": "Inconnue",
+	"logs_search_limit": "Limite",
+	"logs_search_offset": "Offset",
+	"logs_search_filter": "Filtre",
+	"logs_search_button": "Rechercher",
+	"logs_filter_button": "Filtres",
+	"logs_search": "Recherche de journaux",
+	"logs_search_error": "Erreur dans les paramères en entrée, limite et offset doivent être positifs",
+	"modal_button_ok": "OK",
+	"modal_button_cancel": "Annuler",
+	"logs_filter_modal_title": "Filtres des journaux",
+	"logs_filter": "Filtres",
+	"logs_filter_error": "Erreur",
+	"logs_filter_new_button": "Ajouter un filtre",
+	"logs_clause_new_button": "Ajouter une clause",
+	"logs_alert_new_button": "Ajouter une alerte",
+	"filter_table_edit": "Éditer un filtre",
+	"filter_table_new": "Nouveau filtre",
+	"filter_table_clauses": "Clauses",
+	"filter_table_name": "Nom",
+	"filter_table_description": "Description",
+	"filter_table_clauses": "Clauses",
+	"clause_table_element": "Élément",
+	"clause_table_operator": "Comparaison",
+	"clause_table_value": "Valeur",
+	"clause_option_priority": "Priorité",
+	"clause_option_source": "Source",
+	"clause_option_message": "Message",
+	"clause_option_tag": "Étiquette",
+	"clause_operator_equal": "Égal",
+	"clause_operator_different": "Différent",
+	"clause_operator_lower": "Inférieur",
+	"clause_operator_lower_equal": "Inférieur ou égal",
+	"clause_operator_higher": "Supérieur",
+	"clause_operator_higher_equal": "Supérieur ou égal",
+	"clause_operator_contains": "Contient",
+	"clause_operator_notcontains": "Ne contient pas",
+	"logs_filter_save_success": "Succès",
+	"logs_filter_save_error": "Erreur",
+	"logs_filter_remove_success": "Succès",
+	"logs_filter_remove_error": "Erreur",
+	"filter_table_alerts": "Alertes déclenchées",
+	"alert_table_name": "Nom",
+	"alert_table_type": "Type",
+	"logs_menu_smtp": "SMTP",
+	"logs_menu_http": "HTTP",
+	"alert_smtp_title": "Alerte SMTP (e-mail)",
+	"alert_smtp_select": "Choisir une alerte SMTP",
+	"alert_or": "ou",
+	"alert_smtp_name": "Nom",
+	"alert_smtp_host": "Adresse du serveur",
+	"alert_smtp_port": "Port",
+	"alert_smtp_tls": "TLS",
+	"alert_smtp_check_ca": "Vérification du certificat",
+	"alert_smtp_user": "User",
+	"alert_smtp_password": "Mot de passe",
+	"alert_smtp_from": "Adresse émetrice",
+	"alert_smtp_to": "Destinataires",
+	"alert_smtp_cc": "Destinataires en copie",
+	"alert_smtp_bcc": "Destinataires en copie cachée",
+	"alert_smtp_subject": "Sujet du message",
+	"alert_smtp_body": "Contenu du message",
+	"alert_smtp_emails_tooltip": "Les multiples addresses doivent être séparées par des virgules",
+	"alert_subject_body_tooltip": "Vous pouvez utiliser les mots-clefs suivants qui seront remplacés par le contenu de l'alerte: {priority}, {source}, {message}, {tags} et {date}",
+	"logs_alert": "Alerte",
+	"logs_alert_save_success": "Succès",
+	"logs_alert_save_error": "Erreur",
+	"logs_alert_list_smtp": "SMTP:",
+	"logs_alert_list_http": "HTTP:",
+	"alert_http_title": "Alerte HTTP (webservice/API)",
+	"alert_http_select": "Choisir une alerte HTTP",
+	"alert_http_name": "Nom",
+	"alert_http_method": "Méthode HTTP",
+	"alert_http_method_custom": "Autre méthode HTTP (précisez)",
+	"alert_http_url": "URL",
+	"alert_http_body": "HTTP Body",
+	"alert_http_headers": "En-têtes personnalisées",
+	"alert_http_header_key": "Clef",
+	"alert_http_header_value": "Valeur",
+	"alert_http_method_other": "Autre"
 }
