Implement refresh and improve left and right menus

--- a/src/components/core/i18n/en.json
+++ b/src/components/core/i18n/en.json
@@ -86,6 +86,7 @@
     "top_right_menu_lang": "Language",
     "top_right_menu_refresh": "Refresh",
     "top_right_menu_profile": "Profil",
+	"top_right_menu_logout": "Logout",
 	"angharad_loading_title": "Angharad",
 	"benoic_loading_title": "Benoic",
 	"carleon_loading_title": "Carleon",
@@ -128,7 +129,6 @@
 	"menu_monitor": "Graphs",
 	"menu_logs": "Logs",
 	"menu_parameters": "Parameters",
-	"menu_logout": "Logout",
 	"dashboard_title": "Angharad Web Client",
 	"init_message_loading": "Loading",
 	"init_message_loading_complete": "Loading complete",
