--- a/src/components/core/i18n/fr.json
+++ b/src/components/core/i18n/fr.json
@@ -86,6 +86,7 @@
     "top_right_menu_lang": "Langage",
     "top_right_menu_refresh": "Rafraîchir",
     "top_right_menu_profile": "Profil",
+	"top_right_menu_logout": "Déconnexion",
 	"angharad_loading_title": "Angharad",
 	"benoic_loading_title": "Benoic",
 	"carleon_loading_title": "Carleon",
@@ -130,7 +131,6 @@
 	"menu_monitor": "Mesures",
 	"menu_logs": "Journaux",
 	"menu_parameters": "Paramètres",
-	"menu_logout": "Déconnexion",
 	"dashboard_title": "Client Web Angharad",
 	"init_message_loading": "Chargement",
 	"init_message_loading_complete": "Chargement terminé",
