Improve modules enabling/disabling

--- a/src/components/core/i18n/fr.json
+++ b/src/components/core/i18n/fr.json
@@ -98,6 +98,7 @@
 	"edit": "Modifier",
 	"remove": "Supprimer",
 	"add_to_dashboard": "Ajouter au tableau de bord",
+	"bind_to_element": "Associer à un élément",
     "angharad_add_to_dashboard": "Ajout au tableau de bord",
     "angharad_add_to_dashboard_success": "Succès",
     "angharad_add_to_dashboard_error": "Erreur",
@@ -254,6 +255,7 @@
 	"scheduler_save_success": "Succès",
 	"scheduler_save_error": "Erreur",
 	"schedulers_title": "Tâches planifiées",
+	"scheduler_title": "Tâche planifiée",
 	"scheduler_enable_button": "Actif:",
 	"scheduler_next_time": "Prochain lancement:",
 	"event_name_mandatory": "Le nom est obligatoire",
@@ -277,6 +279,8 @@
 	"heater_title": "Thermostat",
 	"sensor_title": "Capteur",
 	"injector_not_found": "Erreur, module inconnu",
+	"angharad_loading_script_title": "Tâche",
+	"angharad_loading_script_message": "Lancement en cours",
 	"script_modal_title": "Tâche",
 	"script_name": "Nom",
 	"script_description": "Description",
@@ -310,6 +314,11 @@
 	"script_remove_error": "Erreur",
 	"script_sensor_select": "Capteur",
 	"script_sensor_value": "Valeur",
+	"script_bind_element_title": "Associer à un élément",
+	"script_bind_element_list": "Liste des éléments",
+	"script_bind_table_select": "Sélectionné",
+	"script_bind_table_type": "Type",
+	"script_bind_table_display": "Nom",
 	"dashboard_button_add_title_line": "Ajouter un séparateur",
 	"dashboard_add_line": "Ajout d'un séparateur",
 	"dashboard_add_line_value": "Titre",
