--- a/src/components/core/i18n/fr.json
+++ b/src/components/core/i18n/fr.json
@@ -121,12 +121,8 @@
 	"monitor": "Moniteur",
 	"menu_home": "Accueil",
 	"menu_lights": "Lumières",
-	"menu_heaters": "Chauffages",
+	"menu_heaters": "Thermostats",
 	"menu_sensors": "Capteurs",
-	"menu_camera": "Caméras",
-	"menu_music": "Musique",
-	"menu_maps": "Cartes",
-	"menu_weather": "Météo",
 	"menu_scripts": "Tâches",
 	"menu_events": "Événements",
 	"menu_monitor": "Mesures",
