--- a/src/components/core/i18n/en.json
+++ b/src/components/core/i18n/en.json
@@ -3,10 +3,10 @@
 	"dimmer_update_name": "Name: ",
 	"dimmer_update_enabled": "Enabled: ",
 	"dimmer_update_monitor": "Monitored: ",
-	"dimmer_update_monitor_every": "Frequency: ",
+	"dimmer_update_monitor_every": "Every: ",
 	"dimmer_btn_ok": "OK",
 	"dimmer_btn_cancel": "Cancel",
-	"dimmer_save": "Dimmer save",
+	"dimmer_save": "Save dimmer",
 	"dimmer_save_success": "Success",
 	"dimmer_save_error": "Error",
 	"dimmer_edit": "Edit",
@@ -16,17 +16,17 @@
 	"heater_update_unit": "Unit: ",
 	"heater_update_enabled": "Enabled: ",
 	"heater_update_monitor": "Monitored: ",
-	"heater_update_monitor_every": "Frequency: ",
+	"heater_update_monitor_every": "Every: ",
 	"heater_btn_ok": "OK",
 	"heater_btn_cancel": "Cancel",
-	"heater_save": "Heater save",
+	"heater_save": "Save heater",
 	"heater_save_success": "Success",
 	"heater_save_error": "Error",
 	"heater_edit": "Edit",
 	"heater_monitor": "Monitor",
 	"heater_mode_title": "Mode",
 	"heater_mode_off": "Off",
-	"heater_mode_auto": "Auto",
+	"heater_mode_auto": "Automatic",
 	"heater_mode_manual": "Manual",
 	"monitor_title": "Monitor: ",
 	"monitor_close": "Close",
@@ -50,10 +50,10 @@
 	"sensor_update_unit": "Unit: ",
 	"sensor_update_enabled": "Enabled: ",
 	"sensor_update_monitor": "Monitored: ",
-	"sensor_update_monitor_every": "Frequency: ",
+	"sensor_update_monitor_every": "Every: ",
 	"sensor_btn_ok": "OK",
 	"sensor_btn_cancel": "Cancel",
-	"sensor_save": "Sensor save",
+	"sensor_save": "Sauvegarde du capteur",
 	"sensor_save_success": "Success",
 	"sensor_save_error": "Error",
 	"sensor_edit": "Edit",
@@ -62,10 +62,10 @@
 	"switch_update_name": "Name: ",
 	"switch_update_enabled": "Enabled: ",
 	"switch_update_monitor": "Monitored: ",
-	"switch_update_monitor_every": "Frequency: ",
+	"switch_update_monitor_every": "Every: ",
 	"switch_btn_ok": "OK",
 	"switch_btn_cancel": "Cancel",
-	"switch_save": "Switch save",
+	"switch_save": "Sauvegarde de l'interrupteur",
 	"switch_save_success": "Success",
 	"switch_save_error": "Error",
 	"switch_edit": "Edit",
@@ -74,10 +74,10 @@
 	"switch_update_name": "Name: ",
 	"switch_update_enabled": "Enabled: ",
 	"switch_update_monitor": "Monitored: ",
-	"switch_update_monitor_every": "Frequency: ",
+	"switch_update_monitor_every": "Every: ",
 	"switch_btn_ok": "OK",
 	"switch_btn_cancel": "Cancel",
-	"switch_save": "Switch save",
+	"switch_save": "Save switch",
 	"switch_save_success": "Success",
 	"switch_save_error": "Error",
 	"switch_edit": "Edit",
@@ -85,11 +85,12 @@
     "top_right_menu_admin_mode": "Admin",
     "top_right_menu_lang": "Language",
     "top_right_menu_refresh": "Refresh",
-    "top_right_menu_profile": "Profil",
-	"top_right_menu_logout": "Logout",
+    "top_right_menu_profile": "Profile",
+	"top_right_menu_logout": "Disconnect",
 	"angharad_loading_title": "Angharad",
 	"benoic_loading_title": "Benoic",
 	"carleon_loading_title": "Carleon",
+	"gareth_loading_title": "Gareth",
 	"btn_ok": "OK",
 	"btn_add": "Add",
 	"btn_cancel": "Cancel",
@@ -97,19 +98,21 @@
 	"edit": "Edit",
 	"remove": "Remove",
 	"add_to_dashboard": "Add to dashboard",
+	"bind_to_element": "Biind to an element",
     "angharad_add_to_dashboard": "Add to dashboard",
     "angharad_add_to_dashboard_success": "Success",
     "angharad_add_to_dashboard_error": "Error",
+	"profile_default": "Défault",
 	"profile": "Profile",
-	"profile_get_error": "Error getting current profile",
-	"profile_default": "Default",
-	"profile_save": "Save profile",
+	"profile_get_error": "Error while saving profile",
+	"profile_save": "Profile save",
 	"profile_save_success": "Success",
 	"profile_save_error": "Error",
-	"angharad_loading_error": "Erreur lors du chargement de Angharad",
-	"benoic_loading_error": "Erreur lors du chargement de Benoic",
-	"carleon_loading_error": "Erreur lors du chargement des modues Carleon",
-	"login_sign_in": "Sign in",
+	"angharad_loading_error": "Error while loading submodule Angharad",
+	"benoic_loading_error": "Error while loading submodule Benoic",
+	"carleon_loading_error": "Error while loading submodule Carleon",
+	"gareth_loading_error": "Error while loading submodule Gareth",
+	"login_sign_in": "Connection",
 	"login_username": "User name",
 	"login_password": "Password",
 	"login_remember": "Remember me",
@@ -117,31 +120,27 @@
 	"heaters_title": "Heaters",
 	"monitor": "Monitor",
 	"menu_home": "Home",
-	"menu_lights": "Ligthts",
+	"menu_lights": "Lights",
 	"menu_heaters": "Heaters",
 	"menu_sensors": "Sensors",
-	"menu_camera": "Cameras",
-	"menu_music": "Music",
-	"menu_maps": "Maps",
-	"menu_weather": "Weather",
 	"menu_scripts": "Scripts",
 	"menu_events": "Events",
-	"menu_monitor": "Graphs",
+	"menu_monitor": "Monitors",
 	"menu_logs": "Logs",
 	"menu_parameters": "Parameters",
 	"dashboard_title": "Angharad Web Client",
 	"init_message_loading": "Loading",
 	"init_message_loading_complete": "Loading complete",
-	"init_message_loading_error": "Loading error",
+	"init_message_loading_error": "Error while loading",
 	"remove_from_dashboard": "Remove",
 	"parameters_title": "Parameters",
-	"param_submodule_title": "Sub-modules",
+	"param_submodule_title": "Submodules",
 	"param_submodule_benoic": "Benoic",
 	"param_submodule_carleon": "Carleon",
 	"param_submodule_gareth": "Gareth",
 	"param_admin_global": "Global",
 	"param_admin_mode": "Admin mode",
-	"param_device_list": "Devices list",
+	"param_device_list": "List of house automation devices",
 	"device_name": "Name",
 	"device_description": "Description",
 	"device_type": "Type",
@@ -149,36 +148,36 @@
 	"device_enabled": "Enabled",
 	"device_action": "Action",
 	"device_options_title": "Type options",
-	"00-00-00_device_type": "Developpment",
-	"00-00-00_uri": "Connexion URI",
-	"00-00-00_baud": "Connexion speed",
+	"00-00-00_device_type": "Developpement",
+	"00-00-00_uri": "Connection URI",
+	"00-00-00_baud": "Connection speed",
 	"00-00-00_do_not_check_certificate": "Do not check certificate",
 	"00-00-00_device_specified": "Options",
-	"device_add": "Add device", 
+	"device_add": "Add a device", 
 	"device_add_success": "Device added", 
 	"device_add_error": "Error",
-	"device_add_name_exist": "A device with the same name already exists",
-	"device_connect": "Device connection", 
+	"device_add_name_exist": "A device with the same name alreay exist",
+	"device_connect": "Connect a device", 
 	"device_connect_success": "Device connected", 
 	"device_connect_error": "Error",
-	"device_disconnect": "Device disconnection", 
+	"device_disconnect": "Disconnect a device", 
 	"device_disconnect_success": "Device disconnected", 
 	"device_disconnect_error": "Error",
-	"device_enable": "Device enable", 
+	"device_enable": "Enable a device", 
 	"device_enable_success": "Device enabled", 
 	"device_enable_error": "Error",
-	"device_disable": "Device disable", 
+	"device_disable": "Disable a device", 
 	"device_disable_success": "Device disabled", 
 	"device_disable_error": "Error",
-	"device_save": "Sauvegarde",
+	"device_save": "Save",
 	"device_save_success": "Device saved", 
 	"device_save_error": "Error",
-	"device_remove": "Delete", 
-	"device_remove_confirm": "Are you sure you want to delete this device ?", 
-	"device_remove_success": "Devicde deleted", 
+	"device_remove": "Remove", 
+	"device_remove_confirm": "Are you sure you want to remove this device ?", 
+	"device_remove_success": "Device removed", 
 	"device_remove_error": "Error",
-	"submodules": "Sub-modules",
-	"submodules_enable_success": "Succes",
+	"submodules": "Submodules",
+	"submodules_enable_success": "Success",
 	"submodules_enable_error": "Error",
 	"param_app_lang": "Language",
 	"scripts_title": "Scripts",
@@ -191,7 +190,7 @@
 	"profile_name": "Name",
 	"profile_description": "Description",
 	"profile_default": "Default profile",
-	"profile_use": "Change",
+	"profile_use": "Use",
 	"profile_action": "Action",
 	"profiles": "Profiles",
 	"profiles_add_success": "Success",
@@ -199,17 +198,238 @@
 	"profiles_remove_success": "Success",
 	"profiles_remove_error": "Error",
 	"profile_remove": "Profile",
-	"profile_remove_confirm": "Are you sure you want to delete this profile ?",
+	"profile_remove_confirm": "Are you sure you want to remove that profile ?",
 	"profiles_save_success": "Success",
 	"profiles_save_error": "Error",
 	"profile_used": "Current profile",
 	"service_add": "Add",
-	"event_modal_title": "Modifier un événement",
-	"events_title": "Events",
+	"event_modal_title": "Events",
+	"events_title": "Événements",
 	"events_button_add": "Add an event",
 	"event_type_select": "Event type",
 	"event_type_scheduler": "Scheduled",
 	"event_type_trigger": "Triggered",
-	"event_script_select": "Scripts run",
-	"script_modal_title": "Script"
+	"event_script_select": "Select a script",
+	"event_add": "Add",
+	"event_script_list": "Scripts",
+	"event_scheduler_date_select": "Next launch",
+	"date_picker_now": "now",
+	"date_picker_today": "Today",
+	"date_picker_date": "Date",
+	"date_picker_time": "Hour",
+	"date_picker_close": "Close",
+	"event_scheduler_repeat": "Repeat",
+	"event_scheduler_remove_after": "Remove after execution",
+	"event_scheduler_repeat_every": "Every",
+	"event_scheduler_repeat_every_minutes": "Minutes",
+	"event_scheduler_repeat_every_hours": "Hours",
+	"event_scheduler_repeat_every_days": "Days",
+	"event_scheduler_repeat_every_days_of_week": "Days of week",
+	"event_scheduler_repeat_every_months": "Months",
+	"event_scheduler_repeat_every_year": "Years",
+	"event_scheduler_repeat_every_value": "Value",
+	"event_scheduler_repeat_every_day_of_week_monday": "Monday",
+	"event_scheduler_repeat_every_day_of_week_tuesday": "Tuesday",
+	"event_scheduler_repeat_every_day_of_week_wednesday": "Wednesday",
+	"event_scheduler_repeat_every_day_of_week_thursday": "Thursday",
+	"event_scheduler_repeat_every_day_of_week_friday": "Friday",
+	"event_scheduler_repeat_every_day_of_week_saturday": "Saturday",
+	"event_scheduler_repeat_every_day_of_week_sunday": "Sunday",
+	"event_condition_select": "Add a condition",
+	"event_condition_list": "Conditions",
+	"event_condition_benoic_switch": "Switch",
+	"event_condition_benoic_dimmer": "Dimmer",
+	"event_condition_benoic_heater": "Heater",
+	"event_condition_benoic_sensor": "Sensor",
+	"condition_switch_on": "on",
+	"condition_switch_off": "off",
+	"not_found": "Not found",
+	"event_name": "Name",
+	"event_description": "Description",
+	"event_enabled": "Enabled",
+	"scheduler_save": "Scheduled task save",
+	"scheduler_save_success": "Success",
+	"scheduler_save_error": "Error",
+	"schedulers_title": "Scheduled tasks",
+	"scheduler_title": "Scheduled task",
+	"scheduler_enable_button": "Enabled:",
+	"scheduler_next_time": "Next launch:",
+	"event_name_mandatory": "Name is mandatory",
+	"event_name_already_exist": "This name already exist",
+	"event_type_mandatory": "You must select en event type",
+	"event_scheduler_date_mandatory": "Date is mandatory",
+	"event_scheduler_date_future": "Date must be in the future",
+	"event_script_mandatory": "You must add at least one task",
+	"scheduler_enable": "Enable a scheduled task",
+	"scheduler_enable_success": "Success",
+	"scheduler_enable_error": "Error",
+	"scheduler_disabled": "Disabled",
+	"condition_or": "or",
+	"scheduler_condition_value": "Value",
+	"condition_contains": "Contains",
+	"condition_not_contains": "Does not contain",
+	"condition_result_select": "Result tested",
+	"condition_result_one_value": "Value",
+	"switch_title": "Switch",
+	"dimmer_title": "Dimmer",
+	"heater_title": "Heater",
+	"sensor_title": "Sensor",
+	"injector_not_found": "Error, inknown module",
+	"angharad_loading_script_title": "Script",
+	"angharad_loading_script_message": "Loading script",
+	"script_modal_title": "Script",
+	"script_name": "Name",
+	"script_description": "Description",
+	"script_add_action": "Add an action",
+	"script_action": "Action",
+	"script_actions": "Actions",
+	"script_action_benoic_switch": "Switch",
+	"script_action_benoic_dimmer": "Dimmer",
+	"script_action_benoic_heater": "Heater",
+	"script_switch_select": "Switch",
+	"script_switch_value": "Status",
+	"not_found": "Not found",
+	"switch_on": "Switch on",
+	"switch_off": "Switch off",
+	"script_save": "Script save",
+	"script_save_success": "Success",
+	"script_save_error": "Error",
+	"script_run": "Running {{name}}",
+	"script_run_success": "Success",
+	"script_run_error": "Error",
+	"script_dimmer_select": "Dimmer",
+	"script_dimmer_value": "Value",
+	"script_heater_select": "Heater",
+	"script_heater_command": "Comand",
+	"script_heater_mode_title": "Mode",
+	"script_error_name_exist": "A script with the same name already exist",
+	"script_element_select": "Élement",
+	"script_remove_confirm": "Are you sure you want to remove this task ?",
+	"script_remove": "Remove",
+	"script_remove_success": "Success",
+	"script_remove_error": "Error",
+	"script_sensor_select": "Sensor",
+	"script_sensor_value": "Value",
+	"script_bind_element_title": "Bind to an element",
+	"script_bind_element_list": "Elements list",
+	"script_bind_table_select": "Selected",
+	"script_bind_table_type": "Type",
+	"script_bind_table_display": "Name",
+	"dashboard_button_add_title_line": "Add a separator",
+	"dashboard_add_line": "Add a separator",
+	"dashboard_add_line_value": "Title",
+	"dimmer_switch_off": "Off",
+	"login": "User name",
+	"password": "Password",
+	"monitors_title": "Monitors",
+	"monitors_button_add": "Add a monitor",
+	"monitor_new_title": "New monitor",
+	"monitor_new_value": "Name",
+	"monitor_save": "Save",
+	"monitor_save_success": "Success",
+	"monitor_save_error": "Error",
+	"monitor_new_element": "New element",
+	"monitor_new_element_button": "Add",
+	"monitor_select_duration": "Change duration",
+	"duration_last_hour": "Last hour",
+	"duration_last_2_hours": "Last 2 hours",
+	"duration_last_3_hours": "Last 3 hours",
+	"duration_last_6_hours": "Last 6 hours",
+	"duration_last_12_hours": "Last 12 hours",
+	"duration_last_day": "Last day",
+	"duration_last_2_days": "Last 2 days",
+	"duration_last_3_days": "Last 3 days",
+	"duration_last_7_days": "Last week",
+	"duration_last_month": "Last month",
+	"logs_title": "Logs",
+	"logs_table_priority": "Priority",
+	"logs_table_date": "Date",
+	"logs_table_source": "Origin",
+	"logs_table_text": "Message",
+	"logs_table_tags": "Tags",
+	"logs_priority_none": "Non",
+	"logs_priority_low": "Low",
+	"logs_priority_medium": "Medium",
+	"logs_priority_high": "High",
+	"logs_priority_critical": "Critial",
+	"logs_priority_not_found": "Unknown",
+	"logs_search_limit": "Limit",
+	"logs_search_offset": "Offset",
+	"logs_search_filter": "Filter",
+	"logs_search_button": "Search",
+	"logs_filter_button": "Filters",
+	"logs_search": "Logs search",
+	"logs_search_error": "Error in input parameters, limit and offset must be positive integers",
+	"modal_button_ok": "OK",
+	"modal_button_cancel": "Cancel",
+	"logs_filter_modal_title": "Logs filters",
+	"logs_filter": "Filters",
+	"logs_filter_error": "Error",
+	"logs_filter_new_button": "Add a filter",
+	"logs_clause_new_button": "Add a clause",
+	"logs_alert_new_button": "Add an alert",
+	"filter_table_edit": "Edit a filter",
+	"filter_table_new": "New filter",
+	"filter_table_clauses": "Clauses",
+	"filter_table_name": "Name",
+	"filter_table_description": "Description",
+	"filter_table_clauses": "Clauses",
+	"clause_table_element": "Élement",
+	"clause_table_operator": "Operator",
+	"clause_table_value": "Value",
+	"clause_option_priority": "Priority",
+	"clause_option_source": "Source",
+	"clause_option_message": "Message",
+	"clause_option_tag": "Tag",
+	"clause_operator_equal": "Équal to",
+	"clause_operator_different": "Different to",
+	"clause_operator_lower": "Lower than",
+	"clause_operator_lower_equal": "Lower than or equal to",
+	"clause_operator_higher": "Higher than",
+	"clause_operator_higher_equal": "Higher than or equal to",
+	"clause_operator_contains": "Contains",
+	"clause_operator_notcontains": "Does not contain",
+	"logs_filter_save_success": "Success",
+	"logs_filter_save_error": "Error",
+	"logs_filter_remove_success": "Success",
+	"logs_filter_remove_error": "Error",
+	"filter_table_alerts": "Triggered alerts",
+	"alert_table_name": "Name",
+	"alert_table_type": "Type",
+	"logs_menu_smtp": "SMTP",
+	"logs_menu_http": "HTTP",
+	"alert_smtp_title": "SMTP alert (e-mail)",
+	"alert_smtp_select": "Choose an SMTP alert",
+	"alert_or": "or",
+	"alert_smtp_name": "Name",
+	"alert_smtp_host": "Server adress",
+	"alert_smtp_port": "Port",
+	"alert_smtp_tls": "TLS",
+	"alert_smtp_check_ca": "Check certificate",
+	"alert_smtp_user": "User",
+	"alert_smtp_password": "Password",
+	"alert_smtp_from": "Sender address",
+	"alert_smtp_to": "Recipients",
+	"alert_smtp_cc": "Carbon copy recipients (cc)",
+	"alert_smtp_bcc": "Hidden carbon copy recipients (bcc)",
+	"alert_smtp_subject": "Subject",
+	"alert_smtp_body": "Message body",
+	"alert_smtp_emails_tooltip": "Multiples addresses must be separated with a comma",
+	"alert_subject_body_tooltip": "You can use thos key-words that will be replaced by the message content: {priority}, {source}, {message}, {tags} and {date}",
+	"logs_alert": "Alert",
+	"logs_alert_save_success": "Success",
+	"logs_alert_save_error": "Error",
+	"logs_alert_list_smtp": "SMTP:",
+	"logs_alert_list_http": "HTTP:",
+	"alert_http_title": "HTTP Alert (webservice/API)",
+	"alert_http_select": "Choose an HTTP alert",
+	"alert_http_name": "Name",
+	"alert_http_method": "HTTP method",
+	"alert_http_method_custom": "Other HTTP method (specify)",
+	"alert_http_url": "URL",
+	"alert_http_body": "HTTP Body",
+	"alert_http_headers": "Customized headers",
+	"alert_http_header_key": "Key",
+	"alert_http_header_value": "Value",
+	"alert_http_method_other": "Other"
 }
