Bugfixes, implement availableModes for heater

--- a/src/components/core/i18n/en.json
+++ b/src/components/core/i18n/en.json
@@ -28,6 +28,9 @@
 	"heater_mode_off": "Off",
 	"heater_mode_auto": "Automatic",
 	"heater_mode_manual": "Manual",
+	"heater_mode_keep": "Keep current",
+	"heater_mode_heat": "Heat",
+	"heater_mode_cool": "Cool",
 	"monitor_title": "Monitor: ",
 	"monitor_close": "Close",
 	"monitor_1_minute": "1 minute",
@@ -153,6 +156,12 @@
 	"00-00-00_baud": "Connection speed",
 	"00-00-00_do_not_check_certificate": "Do not check certificate",
 	"00-00-00_device_specified": "Options",
+	"24-67-99_device_type": "Openzwave device",
+	"24-67-99_uri": "URI to the ZWave device (ex: /dev/ttyACM)",
+	"24-67-99_config_path": "Path to Openzwave configuration folder",
+	"24-67-99_user_path": "Path to Openzwave working folder",
+	"24-67-99_command_line": "Openzwave command line options",
+	"24-67-99_log_path": "Openzwave log file name",
 	"device_add": "Add a device", 
 	"device_add_success": "Device added", 
 	"device_add_error": "Error",
