--- a/src/components/core/i18n/fr.json
+++ b/src/components/core/i18n/fr.json
@@ -28,6 +28,9 @@
 	"heater_mode_off": "Éteint",
 	"heater_mode_auto": "Automatique",
 	"heater_mode_manual": "Manuel",
+	"heater_mode_keep": "Maintenir",
+	"heater_mode_heat": "Chauffe",
+	"heater_mode_cool": "Rafraîchit",
 	"monitor_title": "Moniteur: ",
 	"monitor_close": "Fermer",
 	"monitor_1_minute": "1 minute",
@@ -153,6 +156,12 @@
 	"00-00-00_baud": "Vitesse de connexion",
 	"00-00-00_do_not_check_certificate": "Ne pas vérifier le certificat",
 	"00-00-00_device_specified": "Options",
+	"24-67-99_device_type": "Openzwave",
+	"24-67-99_uri": "URI vers le dispositif (ex: /dev/ttyACM)",
+	"24-67-99_config_path": "Chemin vers les fichiers de configuration Openzwave",
+	"24-67-99_user_path": "Chemin vers le répertoire de travail de Openzwave",
+	"24-67-99_command_line": "Options supplémentaires pour Openzwave",
+	"24-67-99_log_path": "Nom du fichier de journaux Openzwave",
 	"device_add": "Ajout d'un dispositif", 
 	"device_add_success": "Dispositif ajouté", 
 	"device_add_error": "Erreur",
