Implement triggers and bugfixes

--- a/src/components/core/i18n/en.json
+++ b/src/components/core/i18n/en.json
@@ -256,10 +256,22 @@
 	"event_name": "Name",
 	"event_description": "Description",
 	"event_enabled": "Enabled",
+	"event_trigger_source": "Source",
+	"event_trigger_message": "Message",
+	"message_match_equal": "Equal to",
+	"message_match_different": "Different from",
+	"message_match_contains": "Contains",
+	"message_match_not_contains": "Not contains",
+	"message_match_empty": "Empty",
+	"message_match_not_empty": "Not empty",
 	"scheduler_save": "Scheduled task save",
 	"scheduler_save_success": "Success",
 	"scheduler_save_error": "Error",
+	"trigger_save": "Save triggered task",
+	"trigger_save_success": "Success",
+	"trigger_save_error": "Error",
 	"schedulers_title": "Scheduled tasks",
+	"triggers_title": "Triggered tasks",
 	"scheduler_title": "Scheduled task",
 	"scheduler_enable_button": "Enabled:",
 	"scheduler_next_time": "Next launch:",
@@ -269,6 +281,7 @@
 	"event_scheduler_date_mandatory": "Date is mandatory",
 	"event_scheduler_date_future": "Date must be in the future",
 	"event_script_mandatory": "You must add at least one task",
+	"event_trigger_no_element": "You must select a trigger element",
 	"scheduler_enable": "Enable a scheduled task",
 	"scheduler_enable_success": "Success",
 	"scheduler_enable_error": "Error",
