--- a/src/components/core/i18n/fr.json
+++ b/src/components/core/i18n/fr.json
@@ -256,10 +256,22 @@
 	"event_name": "Nom",
 	"event_description": "Description",
 	"event_enabled": "Actif",
+	"event_trigger_source": "Origine",
+	"event_trigger_message": "Message",
+	"message_match_equal": "Égal à",
+	"message_match_different": "Différent de",
+	"message_match_contains": "Contient",
+	"message_match_not_contains": "Ne contient pas",
+	"message_match_empty": "Vide",
+	"message_match_not_empty": "Non vide",
 	"scheduler_save": "Sauvegarde d'une tâche planifiée",
 	"scheduler_save_success": "Succès",
 	"scheduler_save_error": "Erreur",
+	"trigger_save": "Sauvegarde d'une tâche déclenchée",
+	"trigger_save_success": "Succès",
+	"trigger_save_error": "Erreur",
 	"schedulers_title": "Tâches planifiées",
+	"triggers_title": "Tâches déclenchées",
 	"scheduler_title": "Tâche planifiée",
 	"scheduler_enable_button": "Actif:",
 	"scheduler_next_time": "Prochain lancement:",
@@ -269,6 +281,7 @@
 	"event_scheduler_date_mandatory": "La date est obligatoire",
 	"event_scheduler_date_future": "La date doit être dans le futur",
 	"event_script_mandatory": "Vous devez ajouter au moins une tâche",
+	"event_trigger_no_element": "Vous devez sélectionner un élément déclencheur",
 	"scheduler_enable": "Activation d'une tâche planifiée",
 	"scheduler_enable_success": "Succès",
 	"scheduler_enable_error": "Erreur",
