--- a/src/components/core/i18n/en.json
+++ b/src/components/core/i18n/en.json
@@ -285,6 +285,9 @@
 	"scheduler_enable": "Enable a scheduled task",
 	"scheduler_enable_success": "Success",
 	"scheduler_enable_error": "Error",
+	"trigger_enable": "Enable a triggered task",
+	"trigger_enable_success": "Success",
+	"trigger_enable_error": "Error",
 	"scheduler_disabled": "Disabled",
 	"condition_or": "or",
 	"scheduler_condition_value": "Value",
