--- a/src/components/core/i18n/fr.json
+++ b/src/components/core/i18n/fr.json
@@ -286,6 +286,9 @@
 	"scheduler_enable_success": "Succès",
 	"scheduler_enable_error": "Erreur",
 	"scheduler_disabled": "Inactif",
+	"trigger_enable": "Activation d'une tâcche déclenchée",
+	"trigger_enable_success": "Succès",
+	"trigger_enable_error": "Erreur",
 	"condition_or": "ou",
 	"scheduler_condition_value": "Valeur",
 	"condition_contains": "Contient",
